--- a/arch/arm64/configs/citrus_kenzo_defconfig
+++ b/arch/arm64/configs/citrus_kenzo_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Feather-CAF"
+CONFIG_LOCALVERSION="-Fractal-CAF"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
@@ -264,12 +264,14 @@ CONFIG_CLD_HL_SDIO_CORE=y
 CONFIG_WLAN_FEATURE_RX_WAKELOCK=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_FINGERPRINT=y
+CONFIG_SENSORS_HALL=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_ATMEL_MXT=y
+CONFIG_TOUCHSCREEN_ATMEL_MXTS=y
+CONFIG_TOUCHSCREEN_FT5X06=y
+CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 CONFIG_SECURE_TOUCH=y
-CONFIG_TOUCHSCREEN_FT5X46_I2C=y
 CONFIG_TOUCHSCREEN_BU21150=y
 CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_MISC=y
@@ -285,7 +287,8 @@ CONFIG_SENSORS_CAPELLA_CM36283=y
 CONFIG_SENSORS_BMA2X2=y
 CONFIG_SENSORS_MC3430=y
 CONFIG_SENSORS_ISL29044A=y
-CONFIG_FINGERPRINT_FPC1020_HYDROGEN=y
+CONFIG_FINGERPRINT_FPC1020_KENZO=y
+CONFIG_FINGERPRINT_GOODIX_GF318M=y
 # CONFIG_SERIO_I8042 is not set
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -323,6 +326,7 @@ CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_DLOAD_MODE=y
+CONFIG_MSM_PRESERVE_MEM=y
 CONFIG_MSM_PM=y
 CONFIG_APSS_CORE_EA=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
@@ -369,6 +373,10 @@ CONFIG_MSM_CSID=y
 CONFIG_MSM_EEPROM=y
 CONFIG_MSM_ISPIF=y
 CONFIG_HI256=y
+CONFIG_MT9M114=y
+CONFIG_OV5645=y
+CONFIG_OV2685=y
+CONFIG_OV2685_SCV3B4035=y
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_VIDC_V4L2=y
@@ -487,7 +495,7 @@ CONFIG_MSM_BUS_SCALING=y
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_QPNP_HAPTIC=y
 CONFIG_SEEMP_CORE=y
-CONFIG_MACH_XIAOMI_HYDROGEN=y
+CONFIG_MACH_XIAOMI_KENZO=y
 CONFIG_MSM_MDSS_PLL=y
 CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_MSM_IOMMU_V1=y
@@ -558,15 +566,15 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
-CONFIG_EXFAT_FS=y		
-CONFIG_EXFAT_DISCARD=y		
-# CONFIG_EXFAT_DELAYED_SYNC is not set		
-# CONFIG_EXFAT_KERNEL_DEBUG is not set		
-# CONFIG_EXFAT_DEBUG_MSG is not set		
-CONFIG_EXFAT_DEFAULT_CODEPAGE=437		
-CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"		
-CONFIG_NTFS_FS=y		
-# CONFIG_NTFS_DEBUG is not set		
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
 # CONFIG_NTFS_RW is not set
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
