--- a/arch/arm64/configs/citrus_kenzo_defconfig
+++ b/arch/arm64/configs/citrus_kenzo_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-lineageos"
+CONFIG_LOCALVERSION="-Fractal-CAF"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
@@ -8,6 +8,7 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_CGROUPS=y
+CONFIG_WAKE_GESTURES=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
@@ -68,6 +69,7 @@ CONFIG_UNIX=y
 CONFIG_XFRM_USER=y
 CONFIG_NET_KEY=y
 CONFIG_INET=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_IP_ROUTE_VERBOSE=y
@@ -273,6 +275,7 @@ CONFIG_TOUCHSCREEN_BU21150=y
 CONFIG_INPUT_MT_WRAPPER=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_FPC1020=y
+CONFIG_FINGERPRINT_GOODIX_GF318M=y
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_SENSORS_MPU6050=y
 CONFIG_SENSORS_LIS3DH=y
@@ -385,8 +388,10 @@ CONFIG_MSM_DBA=y
 CONFIG_MSM_DBA_ADV7533=y
 CONFIG_FB_MSM=y
 CONFIG_FB_MSM_MDSS=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_SOUND=y
+CONFIG_SOUND_CONTROL=y
 CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
@@ -561,6 +566,16 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
+CONFIG_EXFAT_FS=y		
+CONFIG_EXFAT_DISCARD=y		
+# CONFIG_EXFAT_DELAYED_SYNC is not set		
+# CONFIG_EXFAT_KERNEL_DEBUG is not set		
+# CONFIG_EXFAT_DEBUG_MSG is not set		
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437		
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"		
+CONFIG_NTFS_FS=y		
+# CONFIG_NTFS_DEBUG is not set		
+# CONFIG_NTFS_RW is not set
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_SCHED_DEBUG is not set
