--- a/arch/arm64/configs/citrus_hydrogen_defconfig
+++ b/arch/arm64/configs/citrus_hydrogen_defconfig
@@ -8,7 +8,7 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_CGROUPS=y
-CONFIG_WAKE_GESTURES=y
+#CONFIG_WAKE_GESTURES=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
